# PICO-DOOM

./: .gitignore  .gitmodules  CMakeLists.txt  QUICKSTART.md  README.md  TRL_Edge_Computing.docx  TRL_Edge_Computing.md  lew-edge-trl-expanded.csv  lew-edge-trl.csv  lew-edge-trl.md  pimoroni_pico_import.cmake  setup.sh
.github/: copilot-instructions.md
docs/: BUILDING.md  BUILD_PROGRESS.md  PHASE2_COMPLETION.md  PHASE3_RENDERING.md  WAD_SETUP.md
include/: display_adapter.h  doom_engine.h  input_handler.h  wad_loader.h
releases/: README.md
src/: CMakeLists.txt  doom_engine.c  main.c  wad_loader.c
src/display/: display_adapter.c
src/input/: input_handler.c
